--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Document</title>
 </head>
 
 <body>
     <div class="main">
         <nav>
-            <span><img width="53" src="assets/images/logo.svg" alt="Image 404"></span>
+            <span><img width="60" src="/assets/images/logo.svg" alt="Image 404"></span>
             <div>
                 <button class="btn1">English</button>
                 <button class="btn2">Sign In</button>
@@ -24,13 +25,96 @@
             <span>Unlimited movies, TV shows and more</span>
             <span>Watch anywhere. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
-            <div>
+            <div class="email-in">
                 <input type="email" placeholder="Email address">
                 <button class="btn3">Get Started &#10140;</button>
             </div>
         </div>
         <div class="line"></div>
     </div>
+    <section class="first">
+        <div>
+            <span class="heading">Enjoy on your TV</span>
+            <span class="sub-heading">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and
+                more.</span>
+        </div>
+        <div class="secImg">
+            <img src="/assets/images/first.gif" alt="Image 404">
+        </div>
+    </section>
+
+    <div class="line"></div>
+
+    <section class="second">
+        <div class="phoneImg">
+            <img src="/assets/images/mobile.jpg" alt="Image 404">
+        </div>
+        <div>
+            <span class="heading">Download your shows to watch offline</span>
+            <span class="sub-heading">Save your favourites easily and always have something to watch.</span>
+        </div>
+    </section>
+
+    <div class="line"></div>
+
+    <section class="second">
+
+        <div>
+            <span class="heading">Watch everywhere</span>
+            <span class="sub-heading">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
+        </div>
+
+        <div class="macImg">
+            <img src="/assets/images/second.gif" alt="Image 404">
+        </div>
+    </section>
+
+    <div class="line"></div>
+
+    <section class="second">
+        <div class="phoneImg">
+            <img src="/assets/images/netflix-children.png" alt="Image 404">
+        </div>
+        <div>
+            <span class="heading">Create profiles for kids</span>
+            <span class="sub-heading">Send children on adventures with their favourite characters in a space made just
+                for them—free with your membership.</span>
+        </div>
+    </section>
+
+    <section class="faq">
+        <div><span class="heading">Frequently Asked Questions</span></div>
+        <div class="que sub-heading">
+            <div>
+                <div><span>What is Netflix?</span></div>
+                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+            </div>
+            <div>
+                <div><span>How much does Netflix cost?</span></div>
+                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+            </div>
+            <div>
+                <div><span>Where can i watch?</span></div>
+                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+            </div>
+            <div>
+                <div><span>How do i cancle?</span></div>
+                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+            </div>
+            <div>
+                <div><span>What can i watch on Netflix?</span></div>
+                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+            </div>
+            <div>
+                <div><span>Is Netflix good for kids?</span></div>
+                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+            </div>
+        </div>
+        <div class="email-in">
+            <input type="email" placeholder="Email address">
+            <button class="btn3">Get Started &#10140;</button>
+        </div>
+    </section>
 </body>
 
 </html>
