--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <span><img width="60" src="/assets/images/logo.svg" alt="Image 404"></span>
             <div>
-                <button class="btn1">English</button>
+                <button class="btn1"><img src="/assets/images/lang.svg"> English <img src="/assets/images/down-arrow-fill.svg"></button>
                 <button class="btn2">Sign In</button>
             </div>
         </nav>
@@ -27,7 +27,7 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="email-in">
                 <input type="email" placeholder="Email address">
-                <button class="btn3">Get Started &#10140;</button>
+                <button class="btn3">Get Started <img src="/assets/images/right-arrow.svg" alt=""></button>
             </div>
         </div>
         <div class="line"></div>
@@ -81,7 +81,7 @@
                 for them—free with your membership.</span>
         </div>
     </section>
-
+    <div class="line"></div>
     <section class="faq">
         <div><span class="heading">Frequently Asked Questions</span></div>
         <div class="que sub-heading">
@@ -110,11 +110,62 @@
                 <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
             </div>
         </div>
+        <div class="email-text sub-heading"><span>Ready to watch? Enter your email to create or restart your
+                membership.</span></div>
         <div class="email-in">
             <input type="email" placeholder="Email address">
-            <button class="btn3">Get Started &#10140;</button>
+            <button class="btn3">Get Started <img src="/assets/images/right-arrow.svg" alt=""></button>
         </div>
     </section>
+    <div class="line"></div>
+
+    <footer>
+        <div class="footer">
+            <div><div></div><span>Questions? Call <a href="tel:000-800-919-1694">000-800-919-1694</a></span></div>
+            <div class="flink">
+                <div>
+                    <ul>
+                        <li>FAQ</li>
+                        <li>Investor Relations</li>
+                        <li>Privacy</li>
+                        <li>Speed Test</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>Help Centre</li>
+                        <li>Jobs</li>
+                        <li>Cookie Preferences</li>
+                        <li>Legal Notices</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>Account</li>
+                        <li>Ways to Watch</li>
+                        <li>Corporate Information</li>
+                        <li>Only on Netflix</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>Media Centre</li>
+                        <li>Terms of Use</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <button class="btn1"><img src="/assets/images/lang.svg"> English <img src="assets/images/down-arrow-fill.svg"></button>
+            </div>
+            <div>
+                <span>
+                    Netflix India
+                </span>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
