--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="main">
         <nav>
-            <span><img width="60" src="/assets/images/logo.svg" alt="Image 404"></span>
+            <span><img width="60" src="assets/images/logo.svg" alt="Image 404"></span>
             <div>
-                <button class="btn1"><img src="/assets/images/lang.svg"> English <img src="/assets/images/down-arrow-fill.svg"></button>
+                <button class="btn1"><img src="assets/images/lang.svg"> English <img src="assets/images/down-arrow-fill.svg"></button>
                 <button class="btn2">Sign In</button>
             </div>
         </nav>
@@ -27,7 +27,7 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="email-in">
                 <input type="email" placeholder="Email address">
-                <button class="btn3">Get Started <img src="/assets/images/right-arrow.svg" alt=""></button>
+                <button class="btn3">Get Started <img src="assets/images/right-arrow.svg" alt=""></button>
             </div>
         </div>
         <div class="line"></div>
@@ -39,7 +39,7 @@
                 more.</span>
         </div>
         <div class="secImg">
-            <img src="/assets/images/first.gif" alt="Image 404">
+            <img src="assets/images/first.gif" alt="Image 404">
         </div>
     </section>
 
@@ -47,7 +47,7 @@
 
     <section class="second">
         <div class="phoneImg">
-            <img src="/assets/images/mobile.jpg" alt="Image 404">
+            <img src="assets/images/mobile.jpg" alt="Image 404">
         </div>
         <div>
             <span class="heading">Download your shows to watch offline</span>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="macImg">
-            <img src="/assets/images/second.gif" alt="Image 404">
+            <img src="assets/images/second.gif" alt="Image 404">
         </div>
     </section>
 
@@ -73,7 +73,7 @@
 
     <section class="second">
         <div class="phoneImg">
-            <img src="/assets/images/netflix-children.png" alt="Image 404">
+            <img src="assets/images/netflix-children.png" alt="Image 404">
         </div>
         <div>
             <span class="heading">Create profiles for kids</span>
@@ -87,34 +87,34 @@
         <div class="que sub-heading">
             <div>
                 <div><span>What is Netflix?</span></div>
-                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+                <div><img src="assets/images/plus.svg" alt="Image 404"></div>
             </div>
             <div>
                 <div><span>How much does Netflix cost?</span></div>
-                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+                <div><img src="assets/images/plus.svg" alt="Image 404"></div>
             </div>
             <div>
                 <div><span>Where can i watch?</span></div>
-                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+                <div><img src="assets/images/plus.svg" alt="Image 404"></div>
             </div>
             <div>
                 <div><span>How do i cancle?</span></div>
-                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+                <div><img src="assets/images/plus.svg" alt="Image 404"></div>
             </div>
             <div>
                 <div><span>What can i watch on Netflix?</span></div>
-                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+                <div><img src="assets/images/plus.svg" alt="Image 404"></div>
             </div>
             <div>
                 <div><span>Is Netflix good for kids?</span></div>
-                <div><img src="/assets/images/plus.svg" alt="Image 404"></div>
+                <div><img src="assets/images/plus.svg" alt="Image 404"></div>
             </div>
         </div>
         <div class="email-text sub-heading"><span>Ready to watch? Enter your email to create or restart your
                 membership.</span></div>
         <div class="email-in">
             <input type="email" placeholder="Email address">
-            <button class="btn3">Get Started <img src="/assets/images/right-arrow.svg" alt=""></button>
+            <button class="btn3">Get Started <img src="assets/images/right-arrow.svg" alt=""></button>
         </div>
     </section>
     <div class="line"></div>
@@ -156,7 +156,7 @@
                 </div>
             </div>
             <div>
-                <button class="btn1"><img src="/assets/images/lang.svg"> English <img src="assets/images/down-arrow-fill.svg"></button>
+                <button class="btn1"><img src="assets/images/lang.svg"> English <img src="assets/images/down-arrow-fill.svg"></button>
             </div>
             <div>
                 <span>
