--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <span><img width="60" src="assets/images/logo.svg" alt="Image 404"></span>
             <div>
-                <button class="btn1"><img src="assets/images/lang.svg"> English <img src="assets/images/down-arrow-fill.svg"></button>
+                <button class="btn1"><img src="assets/images/lang.svg"> <p>English</p>  <img src="assets/images/down-arrow-fill.svg"></button>
                 <button class="btn2">Sign In</button>
             </div>
         </nav>
@@ -22,9 +22,9 @@
 
         </div>
         <div class="hero">
-            <span>Unlimited movies, TV shows and more</span>
-            <span>Watch anywhere. Cancel anytime.</span>
-            <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <span class="heading">Unlimited movies, TV shows and more</span>
+            <span class="sub-heading">Watch anywhere. Cancel anytime.</span>
+            <span class="sub-heading">Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="email-in">
                 <input type="email" placeholder="Email address">
                 <button class="btn3">Get Started <img src="assets/images/right-arrow.svg" alt=""></button>
@@ -45,7 +45,7 @@
 
     <div class="line"></div>
 
-    <section class="second">
+    <section class="second sect1">
         <div class="phoneImg">
             <img src="assets/images/mobile.jpg" alt="Image 404">
         </div>
@@ -58,9 +58,8 @@
     <div class="line"></div>
 
     <section class="second">
-
         <div>
-            <span class="heading">Watch everywhere</span>
+            <span class="heading">Watch everywhere</span><br>
             <span class="sub-heading">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
         </div>
 
@@ -71,7 +70,7 @@
 
     <div class="line"></div>
 
-    <section class="second">
+    <section class="second sect1">
         <div class="phoneImg">
             <img src="assets/images/netflix-children.png" alt="Image 404">
         </div>
