--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <title>Document</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
 </head>
 
 <body>
