--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <nav>
             <span><img width="60" src="assets/images/logo.svg" alt="Image 404"></span>
             <div>
-                <button class="btn1"><img src="assets/images/lang.svg"> <p>English</p>  <img src="assets/images/down-arrow-fill.svg"></button>
+                <button class="btn1"><img src="assets/images/lang.svg">
+                    <p>English</p> <img src="assets/images/down-arrow-fill.svg">
+                </button>
                 <button class="btn2">Sign In</button>
             </div>
         </nav>
@@ -120,48 +122,84 @@
 
     <footer>
         <div class="footer">
-            <div><div></div><span>Questions? Call <a href="tel:000-800-919-1694">000-800-919-1694</a></span></div>
-            <div class="flink">
-                <div>
-                    <ul>
-                        <li>FAQ</li>
-                        <li>Investor Relations</li>
-                        <li>Privacy</li>
-                        <li>Speed Test</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>Help Centre</li>
-                        <li>Jobs</li>
-                        <li>Cookie Preferences</li>
-                        <li>Legal Notices</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>Account</li>
-                        <li>Ways to Watch</li>
-                        <li>Corporate Information</li>
-                        <li>Only on Netflix</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>Media Centre</li>
-                        <li>Terms of Use</li>
-                        <li>Contact Us</li>
-                    </ul>
-                </div>
+            <div>
+                <div></div><span>Questions? Call <a href="tel:000-800-919-1694">000-800-919-1694</a></span>
             </div>
             <div>
-                <button class="btn1"><img src="assets/images/lang.svg"> English <img src="assets/images/down-arrow-fill.svg"></button>
+
+                <div class="flink">
+                    <div>
+                        <ul>
+                            <li>FAQ</li>
+                            <li>Investor Relations</li>
+                            <li>Privacy</li>
+                            <li>Speed Test</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>Help Centre</li>
+                            <li>Jobs</li>
+                            <li>Cookie Preferences</li>
+                            <li>Legal Notices</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>Account</li>
+                            <li>Ways to Watch</li>
+                            <li>Corporate Information</li>
+                            <li>Only on Netflix</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>Media Centre</li>
+                            <li>Terms of Use</li>
+                            <li>Contact Us</li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="flink2">
+                    <div>
+                        <ul>
+                            <li>FAQ</li>
+                            <li>Account</li>
+                            <li>Investor Relations</li>
+                            <li>Ways to Watch</li>
+                            <li>Privacy</li>
+                            <li>Corporate Information</li>
+                            <li>Speed Test</li>
+                            <li>Only on Netflix</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>Help Centre</li>
+                            <li>Media Centre</li>
+                            <li>Jobs</li>
+                            <li>Terms of Use</li>
+                            <li>Cookie Preferences</li>
+                            <li>Contact Us</li>
+                            <li>Legal Notices</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
+
+
+            <button class="btn1"><img src="assets/images/lang.svg">
+                <p>English </p> <img src="assets/images/down-arrow-fill.svg">
+            </button>
+
             <div>
                 <span>
                     Netflix India
                 </span>
             </div>
+        </div>
         </div>
     </footer>
 
