--- a/signin.html
+++ b/signin.html
@@ -22,6 +22,8 @@
                 <span>Forgot password?</span>
                 
                 <span><input type="checkbox" name="rembe" id="chk1"><label for="chk1">Remember me</label></span>
+                <span>New to Netflix? Sign up now.</span>
+                <span>This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.</span>
             </div>
         </div>
     </div>
