--- a/signin.html
+++ b/signin.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/signin.css">
     <title>Netflix</title>
 </head>
+
 <body>
     <div class="main">
         <div class="header">
@@ -20,12 +22,31 @@
                 <span>OR</span>
                 <button class="btn2">Use a sign-in code</button>
                 <span>Forgot password?</span>
-                
+
                 <span><input type="checkbox" name="rembe" id="chk1"><label for="chk1">Remember me</label></span>
                 <span>New to Netflix? <a href=""> Sign up now.</a></span>
-                <span>This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href=""> Learn more.</a></span>
+                <span>This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href=""> Learn
+                        more.</a></span>
             </div>
         </div>
+
+        <footer>
+            <div class="footer">
+                <span>Questions? Call 000-800-919-1694</span>
+                <div class="link-list">
+                    <span>FAQ</span>
+                    <span>Help Centre</span>
+                    <span>Terms of Use</span>
+                    <span>Privacy</span>
+                    <span>Cookie Preferences</span>
+                    <span>Corporate Information</span>
+                </div>
+                <button class="btn3"><img src="assets/images/lang.svg">
+                    <p>English </p> <img src="assets/images/down-arrow-fill.svg">
+                </button>
+            </div>
+        </footer>
     </div>
 </body>
+
 </html>
