--- a/signin.html
+++ b/signin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/signin.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <title>Netflix</title>
 </head>
 
@@ -24,7 +25,7 @@
                 <span>Forgot password?</span>
 
                 <span><input type="checkbox" name="rembe" id="chk1"><label for="chk1">Remember me</label></span>
-                <span>New to Netflix? <a href=""> Sign up now.</a></span>
+                <span>New to Netflix? <a href="index.html"> Sign up now.</a></span>
                 <span>This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href=""> Learn
                         more.</a></span>
             </div>
