--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+    <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 <button class="btn1"><img src="assets/images/lang.svg">
                     <p>English</p> <img src="assets/images/down-arrow-fill.svg">
                 </button>
-                <button class="btn2">Sign In</button>
+                <button class="btn2" id="btnsin">Sign In</button>
             </div>
         </nav>
         <div class="box">
@@ -29,7 +29,7 @@
             <span class="sub-heading">Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="email-in">
                 <input type="email" placeholder="Email address">
-                <button class="btn3">Get Started <img src="assets/images/right-arrow.svg" alt=""></button>
+                <button class="btn3" id="btnsup">Get Started <img src="assets/images/right-arrow.svg" alt=""></button>
             </div>
         </div>
         <div class="line"></div>
@@ -115,7 +115,7 @@
                 membership.</span></div>
         <div class="email-in">
             <input type="email" placeholder="Email address">
-            <button class="btn3">Get Started <img src="assets/images/right-arrow.svg" alt=""></button>
+            <button class="btn3" id="btnsup">Get Started <img src="assets/images/right-arrow.svg" alt=""></button>
         </div>
     </section>
     <div class="line"></div>
@@ -202,7 +202,7 @@
         </div>
         </div>
     </footer>
-
+<script src="script.js"></script>
 </body>
 
 </html>
