--- a/signin.html
+++ b/signin.html
@@ -19,7 +19,7 @@
                 <h1>Sign In</h1>
                 <input type="email" placeholder="Email or phone number">
                 <input type="password" placeholder="Password">
-                <button class="btn1">Sign In</button>
+                <button class="btn1" id="btnsin">Sign In</button>
                 <span>OR</span>
                 <button class="btn2">Use a sign-in code</button>
                 <span>Forgot password?</span>
@@ -48,6 +48,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
